--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
   },
   "homepage": "https://github.com/harshal34480/react#readme",
   "devDependencies": {
-    "parcel": "^2.10.3"
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
+    "parcel": "^2.10.3",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
+    "string_decoder": "^1.3.0",
+    "util": "^0.12.5"
   },
   "dependencies": {
     "react": "^18.2.0",
